Moved things around, added favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link href="src/css/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link rel="shortcut icon" type="image/png" href="src/assets/magnifying-glass.png"/>
+		<title>Word Hunt</title>
 	</head>
 	<body>
 		<div id="main"></div>
